--- a/application/raptor/content/file/audio-tag-modal.html
+++ b/application/raptor/content/file/audio-tag-modal.html
@@ -24,20 +24,20 @@
             <!-- Relative embed code (host агуулаагүй зам) -->
             <strong>Relative:</strong>
             <a class="btn btn-sm btn-warning" onclick="copyContent('relative');">copy</a>
-            <!-- Relative embed code-г үзүүлэх блок -->
+            <!-- Relative embed code-г үзүүлэх блок (vanilla HTML) -->
             <pre class="border border-warning bg-dark text-light"
                  id="relative"
-                 style="white-space:pre-wrap">{{ ('<audio controls><source src="' ~ record['path'] ~ '" type="' ~ record['mime_content_type'] ~ '"></audio>')|e }}</pre>
+                 style="white-space:pre-wrap">{{ ('<audio src="' ~ record['path'] ~ '" controls style="max-width: 100%;"></audio>')|e }}</pre>
 
             <hr>
 
             <!-- Absolute embed code (host + path) -->
             <strong>Absolute:</strong>
             <a class="btn btn-sm btn-warning" onclick="copyContent('absolute');">copy</a>
-            <!-- Absolute embed code-г үзүүлэх блок -->
+            <!-- Absolute embed code-г үзүүлэх блок (vanilla HTML) -->
             <pre class="border border-warning bg-dark text-light"
                  id="absolute"
-                 style="white-space:pre-wrap">{{ ('<audio controls><source src="' ~ host ~ record['path'] ~ '" type="' ~ record['mime_content_type'] ~ '"></audio>')|e }}</pre>
+                 style="white-space:pre-wrap">{{ ('<audio src="' ~ host ~ record['path'] ~ '" controls style="max-width: 100%;"></audio>')|e }}</pre>
         </div>
 
         <!-- Modal Footer - хаах товч -->
