--- a/application/raptor/content/file/index-files.html
+++ b/application/raptor/content/file/index-files.html
@@ -86,8 +86,8 @@
             <th scope="col">{{ 'properties'|text }}</th>
             <!-- Файлын тайлбар - хэрэглэгчийн оруулсан description -->
             <th scope="col">{{ 'description'|text }}</th>
-            <!-- Файлын ангилал (category) -->
-            <th scope="col">{{ 'category'|text }}</th>
+            <!-- Файлын зориулалт (purpose) -->
+            <th scope="col">{{ 'purpose'|text('Зориулалт') }}</th>
             <!-- Файлыг keyword-оор шүүх, хайхад зориулагдсан түлхүүр үг -->
             <th scope="col">{{ 'keyword'|text }}</th>
             <!-- Үүсгэсэн огноо / created_at -->
@@ -123,6 +123,12 @@
         } while (Math.round(Math.abs(bytes) * r) / r >= thresh && u < units.length - 1);
         
         return `${bytes.toFixed(1)}${units[u]}`;
+    }
+
+    /* Purpose утгыг текст болгон харуулах */
+    function purposeLabel(val) {
+        const labels = { 0: '', 1: '{{ localization.code == "mn" ? "Толгой зураг" : "Header image" }}', 2: '{{ localization.code == "mn" ? "Контент медиа" : "Content media" }}', 4: '{{ localization.code == "mn" ? "Хавсралт" : "Attachment" }}' };
+        return labels[parseInt(val)] ?? '';
     }
 
     /* HTML-тэй холбогдох аюулгүй байдлын үүднээс энгийн escape */
@@ -274,9 +280,9 @@
             cell3.innerHTML = file['description'] ?? '';
             row.appendChild(cell3);
 
-            /* 📌 4-р багана - category */
+            /* 📌 4-р багана - purpose */
             const cell4 = document.createElement('td');
-            cell4.innerHTML = file['category'] ?? '';
+            cell4.innerHTML = purposeLabel(file['purpose']);
             row.appendChild(cell4);
 
             /* 📌 5-р багана - keyword */
